--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
     <div class="landing">
       <div class="container">
         <div class="text">
-          <h1>This Website Is <br> Awesome</h1>
+          <h1>
+            This Website Is <br />
+            Awesome
+          </h1>
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores
             repellendus distinctio quisquam! Iusto, vero rem quo eveniet
@@ -35,35 +38,63 @@
           <button>sign up</button>
         </div>
         <div class="placeholder">
-            <p>this is a placeholder for an image</p>
+          <p>this is a placeholder for an image</p>
         </div>
       </div>
     </div>
     <!-- End landing -->
     <!-- Start info -->
     <div class="info">
-        <div class="container">
-            <h2>Some random information</h2>
-            <div class="cards">
-                <div class="card">
-                    <div></div>
-                    <p>this is some subtext under an image or an illurtration</p>
-                </div>
-                <div class="card">
-                    <div></div>
-                    <p>this is some subtext under an image or an illurtration</p>
-                </div>
-                <div class="card">
-                    <div></div>
-                    <p>this is some subtext under an image or an illurtration</p>
-                </div>
-                <div class="card">
-                    <div></div>
-                    <p>this is some subtext under an image or an illurtration</p>
-                </div>
-            </div>
+      <div class="container">
+        <h2>Some random information</h2>
+        <div class="cards">
+          <div class="card">
+            <div></div>
+            <p>this is some subtext under an image or illurtration</p>
+          </div>
+          <div class="card">
+            <div></div>
+            <p>this is some subtext under an image or illurtration</p>
+          </div>
+          <div class="card">
+            <div></div>
+            <p>this is some subtext under an image or illurtration</p>
+          </div>
+          <div class="card">
+            <div></div>
+            <p>this is some subtext under an image or illurtration</p>
+          </div>
         </div>
+      </div>
     </div>
     <!-- End info -->
+    <!-- Start quote -->
+    <div class="quote">
+      <p>
+        this is an inspiring quote, or a testimonial from a customer maybe it is
+        just filling up space or maybe people will actully read it who knows all
+        i know that it looks nice
+      </p>
+      <h3>-Thor, Son of Odin</h3>
+    </div>
+    <!-- End quote -->
+    <!-- Start call -->
+    <div class="call">
+      <div class="container">
+        <div class="form">
+          <div class="text">
+            <h3>Call to action! It's time!</h3>
+            <p>sign up for our product by clicking that button over there!</p>
+          </div>
+          <button>Sign up</button>
+        </div>
+      </div>
+    </div>
+    <!-- End call -->
+    <!-- Start footer -->
+    <div class="footer">
+      <p>Copyright &copy The Odin Project 2021</p>
+    </div>
+    <!-- End footer -->
   </body>
 </html>
